Prevent line breaks in parameter labels

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39,6 +39,7 @@ body {
 .parameters .label {
     font-family: sans-serif;
     font-size: 15px;
+    white-space: nowrap;
     color: var(--parameter-text-color);
     height: calc(var(--parameter-bar-height) + 2 * var(--parameter-bar-border-width));
     line-height: calc(var(--parameter-bar-height) + 2 * var(--parameter-bar-border-width));
